add database for PGN storing, cant run maven