@@ -7,7 +7,7 @@ public class BoardContext implements Serializable {
     public BoardContext(String pgn) {
         List<String> strings = PGNParser.parsePGN(pgn);
         new Thread(()->{
-            new Board(null, strings.getFirst());
+            new Board(null, strings.get(0));
         }).start();
         new Thread(()->{
             new Board(null, strings.get(1));
